<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<name>crowdSimulationUserInterface</name>

	<groupId>de.fhg.ivi.crowdsimulation</groupId>
	<artifactId>crowdsimui1</artifactId>
	<version>3.0.0</version>
	<packaging>jar</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<mainClass>de.fhg.ivi.crowdsimulation.ui.CrowdSimulation</mainClass>
		<executableFileName>jCrowdSimulator</executableFileName>
		<executableFileName2>jCrowdSimulator-shade</executableFileName2>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>

	<dependencies>
		<!-- crowdSimulationLib -->
		<dependency>
			<groupId>de.fhg.ivi.crowdsimulation</groupId>
			<artifactId>crowdsimlib1</artifactId>
			<version>3.0.0</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.github.jiconfont/jiconfont -->
		<!-- font awesome icons -->
		<dependency>
			<groupId>com.github.jiconfont</groupId>
			<artifactId>jiconfont</artifactId>
			<version>1.0.0</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.github.jiconfont/jiconfont-font_awesome -->
		<!-- font awesome icons -->
		<dependency>
			<groupId>com.github.jiconfont</groupId>
			<artifactId>jiconfont-font_awesome</artifactId>
			<version>4.7.0.0</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.github.jiconfont/jiconfont-swing -->
		<!-- font awesome icons -->
		<dependency>
			<groupId>com.github.jiconfont</groupId>
			<artifactId>jiconfont-swing</artifactId>
			<version>1.0.1</version>
		</dependency>
	</dependencies>


	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<archive>
								<manifest>
									<mainClass>${mainClass}</mainClass>
								</manifest>
							</archive>
							<descriptorRefs>
								<descriptorRef>jar-with-dependencies</descriptorRef>
							</descriptorRefs>
							<finalName>${executableFileName}</finalName>
							<appendAssemblyId>false</appendAssemblyId>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<transformers>
								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>${mainClass}</mainClass>
								</transformer>
								<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
							</transformers>
							<createDependencyReducedPom>false</createDependencyReducedPom>
							<finalName>${executableFileName2}</finalName>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<!-- build exe with launch4j plugin - experimentell -->
			<plugin>
				<groupId>com.akathist.maven.plugins.launch4j</groupId>
				<artifactId>launch4j-maven-plugin</artifactId>
				<version>1.7.16</version>
				<executions>
					<execution>
						<id>l4j-clui</id>
						<phase>package</phase>
						<goals>
							<goal>launch4j</goal>
						</goals>
						<configuration>
							<headerType>console</headerType>
							<outfile>${project.build.directory}/${executableFileName}.exe</outfile>
							<jar>${project.build.directory}/${executableFileName}.jar</jar>
							<errTitle>encc</errTitle>
							<classPath>
								<mainClass>${mainClass}</mainClass>
								<addDependencies>true</addDependencies>
								<preCp>anything</preCp>
							</classPath>
							<jre>
								<minVersion>1.8.0</minVersion>
								<opts>
									<opt>-Djava.endorsed.dirs=./endorsed</opt>
								</opts>
							</jre>
							<versionInfo>
								<fileVersion>${project.version}.0</fileVersion>
								<txtFileVersion>${project.version}.0</txtFileVersion>
								<fileDescription>${project.name}</fileDescription>
								<copyright>LGPL</copyright>
								<productVersion>${project.version}.0</productVersion>
								<txtProductVersion>${project.version}.0</txtProductVersion>
								<productName>${executableFileName}</productName>
								<originalFilename>${executableFileName}.exe</originalFilename>
								<internalName>${project.name}</internalName>
							</versionInfo>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
